signin part has been completed

--- a/signin.html
+++ b/signin.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="signup.css">
-    <title>Sign Up</title>
+    <link rel="stylesheet" href="signin.css">
+    <title>Sign In</title>
 </head>
 
 <body>
+
     <header>
         <div id="branding">
             <h1 class="header__title">Company</h1>
@@ -31,15 +32,11 @@
     <section>
         <div class="container">
             <div class="content">
-                <h1 class="content__title">Badiiyatdan ro’yxatdan o’ting</h1>
-                <p class="content__text">Do’stlaringiz nima o’qiyotganini ko’ring, kitob tavsiyalarini oling va kitob ustida zavqli suhbatlar uyushtiring</p>
+                <h1 class="content__title">Badiiyatga kirish</h1>
             </div>
             <form id="form">
-                <input id="name" type="text" placeholder="Ism va Familiya">
                 <input id="email" type="email" placeholder="Elektron pochta">
-                <input id="name" type="tel" placeholder="Telefon">
                 <input id="password" type="password" placeholder="Parol">
-                <input id="password2" type="password" placeholder="Parol">
                 <button id="submit" type="submit">Ro’yxatdan o’tish</button>
                 <p>
                     <a id="account" href="#">Akkauntingiz bormi?</a>
@@ -47,6 +44,8 @@
             </form>
         </div>
     </section>
+
+    <script src="signin.js"></script>
 </body>
 
 </html>
