main section responsibility almost completed

--- a/signup.html
+++ b/signup.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div id="branding">
-            <h1 class="header__title">Company</h1>
+            <h1 class="header__title">Badiiyat</h1>
         </div>
         <nav>
             <ul>
