main section has been completed in html and css

--- a/Main/main.html
+++ b/Main/main.html
@@ -26,7 +26,7 @@
             </ul>
         </nav>
         <div class="profile__container">
-            <img id="profile__img" src="images/profile.png" alt="">
+            <img id="profile__img" src="../images/profile.png" alt="">
             <i class="fa-solid fa-angle-down"></i>
         </div>
     </header>
@@ -34,7 +34,7 @@
     <section>
         <div class="section__img-container">
             <div class="img__card">
-                <img src="images/o'tkir.png" alt="">
+                <img src="../images/o'tkir.png" alt="">
             </div>
             <div class="img__info-row">
 
@@ -81,42 +81,42 @@
                 <div class="creature__row">
 
                     <div class="creature__card">
-                        <img src="images/asarlari.png" alt="">
+                        <img src="../images/asarlari.png" alt="">
                         <h5 class="creature__card-title">Dunyoning ishlari</h5>
                         <p class="creature__text"><i class="fa-solid fa-star"></i>4.1 • 3400 ta fikrlar</p>
                     </div>
                     <div class="creature__card">
-                        <img src="images/asarlari.png" alt="">
+                        <img src="../images/asarlari.png" alt="">
                         <h5 class="creature__card-title">Dunyoning ishlari</h5>
                         <p class="creature__text"><i class="fa-solid fa-star"></i>4.1 • 3400 ta fikrlar</p>
                     </div>
                     <div class="creature__card">
-                        <img src="images/asarlari.png" alt="">
+                        <img src="../images/asarlari.png" alt="">
                         <h5 class="creature__card-title">Dunyoning ishlari</h5>
                         <p class="creature__text"><i class="fa-solid fa-star"></i>4.1 • 3400 ta fikrlar</p>
                     </div>
                     <div class="creature__card">
-                        <img src="images/asarlari.png" alt="">
+                        <img src="../images/asarlari.png" alt="">
                         <h5 class="creature__card-title">Dunyoning ishlari</h5>
                         <p class="creature__text"><i class="fa-solid fa-star"></i>4.1 • 3400 ta fikrlar</p>
                     </div>
                     <div class="creature__card">
-                        <img src="images/asarlari.png" alt="">
+                        <img src="../images/asarlari.png" alt="">
                         <h5 class="creature__card-title">Dunyoning ishlari</h5>
                         <p class="creature__text"><i class="fa-solid fa-star"></i>4.1 • 3400 ta fikrlar</p>
                     </div>
                     <div class="creature__card">
-                        <img src="images/asarlari.png" alt="">
+                        <img src="../images/asarlari.png" alt="">
                         <h5 class="creature__card-title">Dunyoning ishlari</h5>
                         <p class="creature__text"><i class="fa-solid fa-star"></i>4.1 • 3400 ta fikrlar</p>
                     </div>
                     <div class="creature__card">
-                        <img src="images/asarlari.png" alt="">
+                        <img src="../images/asarlari.png" alt="">
                         <h5 class="creature__card-title">Dunyoning ishlari</h5>
                         <p class="creature__text"><i class="fa-solid fa-star"></i>4.1 • 3400 ta fikrlar</p>
                     </div>
                     <div class="creature__card">
-                        <img src="images/asarlari.png" alt="">
+                        <img src="../images/asarlari.png" alt="">
                         <h5 class="creature__card-title">Dunyoning ishlari</h5>
                         <p class="creature__text"><i class="fa-solid fa-star"></i>4.1 • 3400 ta fikrlar</p>
                     </div>
