home has been completed in html and css

--- a/Home-page/home.html
+++ b/Home-page/home.html
@@ -42,7 +42,204 @@
                 </form>
             </div>
         </main>
+
+        <section>
+            <div class="title__container">
+                <h1 class="title">Asosiy kategoriyalar</h1>
+            </div>
+
+            <ul id="ul__container">
+                <li>
+                    <a href="#">Temuriylar davri</a>
+                </li>
+                <li>
+                    <a href="#">Jadid adabiyoti</a>
+                </li>
+                <li>
+                    <a href="#">Sovet davri</a>
+                </li>
+                <li>
+                    <a href="#">Mustaqillik davri</a>
+                </li>
+            </ul>
+
+            <div class="row">
+
+                <div class="card">
+                    <img src="../images/avloniy.png" alt="">
+                    <div class="card_content">
+                        <p class="card__text">
+                            Abdulla Avloniy <br>
+                            <span>1878-1934</span>
+                        </p>
+                        <div class="icons">
+                            <div class="folder">
+                                <i class="fa-solid fa-folder-open"></i>77
+                            </div>
+                            <div class="headphone">
+                                <i class="fa-solid fa-headphones-simple"></i>77
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../images/avloniy.png" alt="">
+                    <div class="card_content">
+                        <p class="card__text">
+                            Abdulla Avloniy <br>
+                            <span>1878-1934</span>
+                        </p>
+                        <div class="icons">
+                            <div class="folder">
+                                <i class="fa-solid fa-folder-open"></i>77
+                            </div>
+                            <div class="headphone">
+                                <i class="fa-solid fa-headphones-simple"></i>77
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../images/avloniy.png" alt="">
+                    <div class="card_content">
+                        <p class="card__text">
+                            Abdulla Avloniy <br>
+                            <span>1878-1934</span>
+                        </p>
+                        <div class="icons">
+                            <div class="folder">
+                                <i class="fa-solid fa-folder-open"></i>77
+                            </div>
+                            <div class="headphone">
+                                <i class="fa-solid fa-headphones-simple"></i>77
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../images/avloniy.png" alt="">
+                    <div class="card_content">
+                        <p class="card__text">
+                            Abdulla Avloniy <br>
+                            <span>1878-1934</span>
+                        </p>
+                        <div class="icons">
+                            <div class="folder">
+                                <i class="fa-solid fa-folder-open"></i>77
+                            </div>
+                            <div class="headphone">
+                                <i class="fa-solid fa-headphones-simple"></i>77
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../images/avloniy.png" alt="">
+                    <div class="card_content">
+                        <p class="card__text">
+                            Abdulla Avloniy <br>
+                            <span>1878-1934</span>
+                        </p>
+                        <div class="icons">
+                            <div class="folder">
+                                <i class="fa-solid fa-folder-open"></i>77
+                            </div>
+                            <div class="headphone">
+                                <i class="fa-solid fa-headphones-simple"></i>77
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../images/avloniy.png" alt="">
+                    <div class="card_content">
+                        <p class="card__text">
+                            Abdulla Avloniy <br>
+                            <span>1878-1934</span>
+                        </p>
+                        <div class="icons">
+                            <div class="folder">
+                                <i class="fa-solid fa-folder-open"></i>77
+                            </div>
+                            <div class="headphone">
+                                <i class="fa-solid fa-headphones-simple"></i>77
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../images/avloniy.png" alt="">
+                    <div class="card_content">
+                        <p class="card__text">
+                            Abdulla Avloniy <br>
+                            <span>1878-1934</span>
+                        </p>
+                        <div class="icons">
+                            <div class="folder">
+                                <i class="fa-solid fa-folder-open"></i>77
+                            </div>
+                            <div class="headphone">
+                                <i class="fa-solid fa-headphones-simple"></i>77
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../images/avloniy.png" alt="">
+                    <div class="card_content">
+                        <p class="card__text">
+                            Abdulla Avloniy <br>
+                            <span>1878-1934</span>
+                        </p>
+                        <div class="icons">
+                            <div class="folder">
+                                <i class="fa-solid fa-folder-open"></i>77
+                            </div>
+                            <div class="headphone">
+                                <i class="fa-solid fa-headphones-simple"></i>77
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../images/avloniy.png" alt="">
+                    <div class="card_content">
+                        <p class="card__text">
+                            Abdulla Avloniy <br>
+                            <span>1878-1934</span>
+                        </p>
+                        <div class="icons">
+                            <div class="folder">
+                                <i class="fa-solid fa-folder-open"></i>77
+                            </div>
+                            <div class="headphone">
+                                <i class="fa-solid fa-headphones-simple"></i>77
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="../images/avloniy.png" alt="">
+                    <div class="card_content">
+                        <p class="card__text">
+                            Abdulla Avloniy <br>
+                            <span>1878-1934</span>
+                        </p>
+                        <div class="icons">
+                            <div class="folder">
+                                <i class="fa-solid fa-folder-open"></i>77
+                            </div>
+                            <div class="headphone">
+                                <i class="fa-solid fa-headphones-simple"></i>77
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
     </div>
+
 
     <script src="home.js"></script>
 </body>
