--- a/Sign-in/signin.html
+++ b/Sign-in/signin.html
@@ -34,17 +34,19 @@
             <div class="content">
                 <h1 class="content__title">Badiiyatga kirish</h1>
             </div>
+
             <form id="form">
                 <input id="email" type="email" placeholder="Elektron pochta">
                 <input id="password" type="password" placeholder="Parol">
                 <button id="submit" type="submit">Ro’yxatdan o’tish</button>
                 <p>
-                    <a id="account" href="#">Akkauntingiz bormi?</a>
+                    <a id="account" href="../Sign-up/signup.html">Ro’yxatdan o’tish</a>
                 </p>
             </form>
         </div>
     </section>
 
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="signin.js"></script>
 </body>
 
