--- a/Sign-up/signup.html
+++ b/Sign-up/signup.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
         <div class="btn__container">
-            <button><a href="signup.html">Sign Up</a></button>
+            <button><a href="../Sign-in/signin.html">Sign In</a></button>
         </div>
     </header>
 
@@ -45,7 +45,7 @@
                 <p id="password__msg"></p>
                 <button id="submit" type="submit">Ro’yxatdan o’tish</button>
                 <p>
-                    <a id="account" href="#">Akkauntingiz bormi?</a>
+                    <a id="account" href="../Sign-in/signin.html">Akkauntim bor</a>
                 </p>
             </form>
         </div>
