--- a/Detailes/detailes.html
+++ b/Detailes/detailes.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <!-- header -->
+    <!-- start of header -->
     <header>
         <div id="branding">
             <h1 class="header__title">Badiiyat</h1>
@@ -30,13 +30,15 @@
             <i class="fa-solid fa-angle-down"></i>
         </div>
     </header>
+    <!-- end of header -->
 
-    <!-- main -->
+    <!-- start of main -->
     <main>
         <div class="container">
             <div class="main__img-container">
                 <img src="../images/detailes-main.png" alt="">
             </div>
+
             <div class="main__content">
                 <div class="main__title-container">
                     <h1 class="main__title">Qo’rqma</h1>
@@ -111,8 +113,38 @@
                         </div>
                     </div>
                 </div>
+
             </div>
+        </div>
     </main>
+    <!-- end of main__container -->
+
+    <!-- start of section -->
+    <div class="container">
+        <section>
+            <ul class="lists">
+                <li class="lists__item">Muallif haqida</li>
+                <li class="lists__item">Kitobdan iqtiboslar</li>
+                <li class="lists__item">Kitobxonlar taqrizi</li>
+            </ul>
+
+            <div class="about__author">
+                <div class="author__card">
+                    <div class="author__card-img">
+                        <img src="../images/author.png" alt="">
+                    </div>
+                    <div class="author__card-info">
+                        <h2 class="author__card-name"> Javlon Jovliyev</h2>
+                        <p class="author__card-text">Жавлон Жовлиев 1991 yil Қашқадарё вилояти, Қамаши туманида туғилган. Ўзбекистон давлат санъат ва маданият институтининг санъатшунослик журналистика йўналишини бакалавр ва магистратура босқичини тамомлаган. Ҳозирда Алишер Навоий
+                            номидаги Ўзбекистон Миллий кутубхонасида ишламоқда. Республика ёш ижодкорларининг анъанавий Зомин семинари иштирокчиси. 2019 йилда Ижод фонди томонидан биринчи китоби нашр этилган.
+                        </p>
+                        <p class="author__card-more">Muallif haqida ko’proq...</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <!-- end of section -->
 
     <script src="detailes.js"></script>
 </body>
