author section has been completed in html and css

--- a/Detailes/detailes.html
+++ b/Detailes/detailes.html
@@ -120,30 +120,28 @@
     <!-- end of main__container -->
 
     <!-- start of section -->
-    <div class="container">
-        <section>
-            <ul class="lists">
-                <li class="lists__item">Muallif haqida</li>
-                <li class="lists__item">Kitobdan iqtiboslar</li>
-                <li class="lists__item">Kitobxonlar taqrizi</li>
-            </ul>
+    <section>
+        <ul class="lists">
+            <li class="lists__item">Muallif haqida</li>
+            <li class="lists__item">Kitobdan iqtiboslar</li>
+            <li class="lists__item">Kitobxonlar taqrizi</li>
+        </ul>
 
-            <div class="about__author">
-                <div class="author__card">
-                    <div class="author__card-img">
-                        <img src="../images/author.png" alt="">
-                    </div>
-                    <div class="author__card-info">
-                        <h2 class="author__card-name"> Javlon Jovliyev</h2>
-                        <p class="author__card-text">Жавлон Жовлиев 1991 yil Қашқадарё вилояти, Қамаши туманида туғилган. Ўзбекистон давлат санъат ва маданият институтининг санъатшунослик журналистика йўналишини бакалавр ва магистратура босқичини тамомлаган. Ҳозирда Алишер Навоий
-                            номидаги Ўзбекистон Миллий кутубхонасида ишламоқда. Республика ёш ижодкорларининг анъанавий Зомин семинари иштирокчиси. 2019 йилда Ижод фонди томонидан биринчи китоби нашр этилган.
-                        </p>
-                        <p class="author__card-more">Muallif haqida ko’proq...</p>
-                    </div>
+        <div class="about__author">
+            <div class="author__card">
+                <div class="author__card-img">
+                    <img src="../images/author.png" alt="">
+                </div>
+                <div class="author__card-info">
+                    <h2 class="author__card-name"> Javlon Jovliyev</h2>
+                    <p class="author__card-text">Жавлон Жовлиев 1991 yil Қашқадарё вилояти, Қамаши туманида туғилган. Ўзбекистон давлат санъат ва маданият институтининг санъатшунослик журналистика йўналишини бакалавр ва магистратура босқичини тамомлаган. Ҳозирда Алишер Навоий номидаги
+                        Ўзбекистон Миллий кутубхонасида ишламоқда. Республика ёш ижодкорларининг анъанавий Зомин семинари иштирокчиси. 2019 йилда Ижод фонди томонидан биринчи китоби нашр этилган.
+                    </p>
+                    <p class="author__card-more">Muallif haqida ko’proq...</p>
                 </div>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
     <!-- end of section -->
 
     <script src="detailes.js"></script>
