book quotes section has been completed in html and css

--- a/Detailes/detailes.html
+++ b/Detailes/detailes.html
@@ -141,6 +141,29 @@
                 </div>
             </div>
         </div>
+
+        <div class="book__quotes">
+            <div class="book__quotes-card">
+                <p class="book__quotes-text">
+                    Inson bolasi ne kunlarni ko‘rmaydi?! Har bir odam o‘z g‘ami bilan bo‘lsa, hayotdan ko‘z yumib ketganlarga umr bo‘yi motam tutib o‘tsa, bu moddiy olam shu kunlarga yetolarmidi? Hayot to‘lqini ojizlarni qirg‘oqqa irg‘itib tashlaydi. Oqimga qarshi suza olganlar,
+                    to‘lqinni egarlaganlargina ertangi kunga yetib keladi.
+                </p>
+                <div class="book__quotes-icons">
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-code-merge"></i>
+                </div>
+            </div>
+
+            <div class="book__quotes-card">
+                <p class="book__quotes-text">
+                    Yer kurrasida chumolidek mehnat qilayotganlardan ko‘ra, tuproq tagida yotganlar ko‘p. Yer qatlami odam suyaklariga to‘lib ketgan.
+                </p>
+                <div class="book__quotes-icons">
+                    <i class="fa-solid fa-heart"></i>
+                    <i class="fa-solid fa-code-merge"></i>
+                </div>
+            </div>
+        </div>
     </section>
     <!-- end of section -->
 
