some changes and some part of authors has been changed

--- a/Detailes/detailes.html
+++ b/Detailes/detailes.html
@@ -167,6 +167,30 @@
     </section>
     <!-- end of section -->
 
+    <!-- start of footer -->
+    <footer>
+        <div class="footer__container">
+
+            <div class="footer__card">
+                <img src="../images/avloniy.png" alt="">
+                <div class="card_content">
+                    <p class="card__text">
+                        Abdulla Avloniy <br>
+                        <span>1878-1934</span>
+                    </p>
+                    <div class="icons">
+                        <div class="folder">
+                            <i class="fa-solid fa-folder-open"></i>77
+                        </div>
+                        <div class="headphone">
+                            <i class="fa-solid fa-headphones-simple"></i>77
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <script src="detailes.js"></script>
 </body>
 
