author par has been completed in html and css

--- a/add-authors/authors.html
+++ b/add-authors/authors.html
@@ -14,14 +14,17 @@
     <div class="container">
         <div class="img__container">
             <img src="../images/avloniy.png" alt="">
+            <h2 class="title">Hello</h2>
+            <button id="upload">Upload Image</button>
         </div>
         <div class="inputs__container">
+            <h1 class="inputs__title">Add Author</h1>
             <form id="form">
                 <input type="text" name="firstName" placeholder="First Name">
                 <input type="text" name="lastName" placeholder="Last Name">
                 <input type="date" name="date_of_birth" placeholder="date of Birth">
                 <input type="date" name="date_of_death" placeholder="date of Death">
-                <button type="submit">Submit</button>
+                <button id="submit" type="submit">Submit</button>
             </form>
         </div>
     </div>
