home js has been completed

--- a/Home-page/home.html
+++ b/Home-page/home.html
@@ -21,8 +21,8 @@
                 <li><a href="index.html">Bosh sahifa</a></li>
                 <li><a href="about.html">Nasr</a></li>
                 <li><a href="services.html">Nazm</a></li>
-                <li><a href="contact.html">Maqolalar</a></li>
-                <li><a href="contact.html">Forum</a></li>
+                <li><a href="../add-book/book.html">Add Book</a></li>
+                <li><a href="../add-authors/authors.html">Add Authors</a></li>
             </ul>
         </nav>
         <div class="profile__container">
@@ -63,180 +63,7 @@
                 </li>
             </ul>
 
-            <div class="row">
-
-                <div class="card">
-                    <img src="../images/avloniy.png" alt="">
-                    <div class="card_content">
-                        <p class="card__text">
-                            Abdulla Avloniy <br>
-                            <span>1878-1934</span>
-                        </p>
-                        <div class="icons">
-                            <div class="folder">
-                                <i class="fa-solid fa-folder-open"></i>77
-                            </div>
-                            <div class="headphone">
-                                <i class="fa-solid fa-headphones-simple"></i>77
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="../images/avloniy.png" alt="">
-                    <div class="card_content">
-                        <p class="card__text">
-                            Abdulla Avloniy <br>
-                            <span>1878-1934</span>
-                        </p>
-                        <div class="icons">
-                            <div class="folder">
-                                <i class="fa-solid fa-folder-open"></i>77
-                            </div>
-                            <div class="headphone">
-                                <i class="fa-solid fa-headphones-simple"></i>77
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="../images/avloniy.png" alt="">
-                    <div class="card_content">
-                        <p class="card__text">
-                            Abdulla Avloniy <br>
-                            <span>1878-1934</span>
-                        </p>
-                        <div class="icons">
-                            <div class="folder">
-                                <i class="fa-solid fa-folder-open"></i>77
-                            </div>
-                            <div class="headphone">
-                                <i class="fa-solid fa-headphones-simple"></i>77
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="../images/avloniy.png" alt="">
-                    <div class="card_content">
-                        <p class="card__text">
-                            Abdulla Avloniy <br>
-                            <span>1878-1934</span>
-                        </p>
-                        <div class="icons">
-                            <div class="folder">
-                                <i class="fa-solid fa-folder-open"></i>77
-                            </div>
-                            <div class="headphone">
-                                <i class="fa-solid fa-headphones-simple"></i>77
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="../images/avloniy.png" alt="">
-                    <div class="card_content">
-                        <p class="card__text">
-                            Abdulla Avloniy <br>
-                            <span>1878-1934</span>
-                        </p>
-                        <div class="icons">
-                            <div class="folder">
-                                <i class="fa-solid fa-folder-open"></i>77
-                            </div>
-                            <div class="headphone">
-                                <i class="fa-solid fa-headphones-simple"></i>77
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="../images/avloniy.png" alt="">
-                    <div class="card_content">
-                        <p class="card__text">
-                            Abdulla Avloniy <br>
-                            <span>1878-1934</span>
-                        </p>
-                        <div class="icons">
-                            <div class="folder">
-                                <i class="fa-solid fa-folder-open"></i>77
-                            </div>
-                            <div class="headphone">
-                                <i class="fa-solid fa-headphones-simple"></i>77
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="../images/avloniy.png" alt="">
-                    <div class="card_content">
-                        <p class="card__text">
-                            Abdulla Avloniy <br>
-                            <span>1878-1934</span>
-                        </p>
-                        <div class="icons">
-                            <div class="folder">
-                                <i class="fa-solid fa-folder-open"></i>77
-                            </div>
-                            <div class="headphone">
-                                <i class="fa-solid fa-headphones-simple"></i>77
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="../images/avloniy.png" alt="">
-                    <div class="card_content">
-                        <p class="card__text">
-                            Abdulla Avloniy <br>
-                            <span>1878-1934</span>
-                        </p>
-                        <div class="icons">
-                            <div class="folder">
-                                <i class="fa-solid fa-folder-open"></i>77
-                            </div>
-                            <div class="headphone">
-                                <i class="fa-solid fa-headphones-simple"></i>77
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="../images/avloniy.png" alt="">
-                    <div class="card_content">
-                        <p class="card__text">
-                            Abdulla Avloniy <br>
-                            <span>1878-1934</span>
-                        </p>
-                        <div class="icons">
-                            <div class="folder">
-                                <i class="fa-solid fa-folder-open"></i>77
-                            </div>
-                            <div class="headphone">
-                                <i class="fa-solid fa-headphones-simple"></i>77
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="../images/avloniy.png" alt="">
-                    <div class="card_content">
-                        <p class="card__text">
-                            Abdulla Avloniy <br>
-                            <span>1878-1934</span>
-                        </p>
-                        <div class="icons">
-                            <div class="folder">
-                                <i class="fa-solid fa-folder-open"></i>77
-                            </div>
-                            <div class="headphone">
-                                <i class="fa-solid fa-headphones-simple"></i>77
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
+            <div class="row"></div>
         </section>
     </div>
 
