shelf par has been completed at all

--- a/add-authors/authors.html
+++ b/add-authors/authors.html
@@ -19,7 +19,7 @@
         <nav>
             <ul>
                 <li><a href="../Home-page/home.html">Home</a></li>
-                <li><a href="about.html">Nasr</a></li>
+                <li><a href="../shelf/shelf.html">Shelf</a></li>
                 <li><a href="services.html">Nazm</a></li>
                 <li><a href="../add-book/book.html">Add Book</a></li>
                 <li><a href="../add-authors/authors.html">Add Authors</a></li>
