--- a/shelf/shelf.html
+++ b/shelf/shelf.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="shelf.css">
     <title>Home Page</title>
 </head>
 
@@ -18,7 +18,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="../Home-page/home.html">Home</a></li>
                 <li><a href="../shelf/shelf.html">Shelf</a></li>
                 <li><a href="services.html">Nazm</a></li>
                 <li><a href="../add-book/book.html">Add Book</a></li>
@@ -63,12 +63,13 @@
                 </li>
             </ul>
 
-            <div class="row"></div>
+            <div class="row">
+            </div>
         </section>
     </div>
 
 
-    <script src="home.js"></script>
+    <script src="shelf.js"></script>
 </body>
 
 </html>
