--- a/Main/main.html
+++ b/Main/main.html
@@ -18,8 +18,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Bosh sahifa</a></li>
-                <li><a href="about.html">Nasr</a></li>
+                <li><a href="../Home-page/home.html">Home</a></li>
+                <li><a href="../shelf/shelf.html">Shelf</a></li>
                 <li><a href="services.html">Nazm</a></li>
                 <li><a href="contact.html">Maqolalar</a></li>
                 <li><a href="contact.html">Forum</a></li>
